--- a/lib/evmmax/CMakeLists.txt
+++ b/lib/evmmax/CMakeLists.txt
@@ -4,6 +4,7 @@
 
 add_library(evmmax STATIC)
 add_library(evmone::evmmax ALIAS evmmax)
+target_compile_features(evmmax PUBLIC cxx_std_20)
 target_link_libraries(evmmax PRIVATE intx::intx)
 target_sources(
     evmmax PRIVATE
